--- a/Config/DefaultTaskSystemBP.ini
+++ b/Config/DefaultTaskSystemBP.ini
@@ -4,3 +4,4 @@
 +FunctionRedirects=(OldName="/Script/TaskSystemBP.TSBTaskDataLibrary.MakeTaskStructResult",NewName="/Script/TaskSystemBP.TSBTaskDataLibrary.MakeTaskStructData")
 +FunctionRedirects=(OldName="/Script/TaskSystemBP.TSBTaskDataLibrary.GetTaskStructResult",NewName="/Script/TaskSystemBP.TSBTaskDataLibrary.GetTaskStructData")
 +PropertyRedirects=(OldName="/Script/TaskSystemBP.TSBTaskData.ResultValue",NewName="/Script/TaskSystemBP.TSBTaskData.DataValue")
++StructRedirects=(OldName="/Script/TaskSystemBP.TSBTaskHandle",NewName="/Script/TaskSystemBP.TSBTaskBase")
