fix: CoreRedirector に旧称からのリダイレクトを追加

--- a/Config/DefaultTaskSystemBP.ini
+++ b/Config/DefaultTaskSystemBP.ini
@@ -4,4 +4,5 @@
 +FunctionRedirects=(OldName="/Script/TaskSystemBP.TSBTaskDataLibrary.MakeTaskStructResult",NewName="/Script/TaskSystemBP.TSBTaskDataLibrary.MakeTaskStructData")
 +FunctionRedirects=(OldName="/Script/TaskSystemBP.TSBTaskDataLibrary.GetTaskStructResult",NewName="/Script/TaskSystemBP.TSBTaskDataLibrary.GetTaskStructData")
 +PropertyRedirects=(OldName="/Script/TaskSystemBP.TSBTaskData.ResultValue",NewName="/Script/TaskSystemBP.TSBTaskData.DataValue")
-+StructRedirects=(OldName="/Script/TaskSystemBP.TSBTaskHandle",NewName="/Script/TaskSystemBP.TSBTaskBase")
+;+StructRedirects=(OldName="/Script/TaskSystemBP.TSBTaskHandle",NewName="/Script/TaskSystemBP.TSBTaskBase")
++StructRedirects=(OldName="/Script/TaskSystemBP.TSBTaskBase",NewName="/Script/TaskSystemBP.TSBTaskHandle")
